--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
 /*  PADS  */
 
 
-.letter{
+.drum-pad{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -44,6 +44,11 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 0.2rem;
+}
+
+.drum-pad.active {
+  box-shadow: 0 0 20px orange;
+  transform: scale(1.05);
 }
 
 /*  CONTROLS  */
